[project]
name = "bartender"
version = "0.1.0"
description = "Bartender MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.uv]
dev-dependencies = [
    "factory-boy>=3.3.1,<4",
    "faker>=30.6.0,<31",
    "pytest-cov>=5.0.0,<6",
    "pytest-mock>=3.14.0",
    "pytest>=8.3.3,<9",
]
