[project]
name = "bartender"
version = "0.1.0"
description = "Bartender MVP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django-cors-headers==4.*",
    "django-debug-toolbar==4.*",
    "django==4.2.*",
    "fastnanoid==0.4.*",
    "pillow==11.*",
    "psycopg==3.2.*",
]

[tool.uv]
dev-dependencies = [
    "factory-boy>=3.3.1,<4",
    "pytest-cov>=5.0.0,<6",
    "pytest-django>=4.9.0",
    "pytest-mock>=3.14.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.3.3,<9",
]

[project.scripts]
manage = "manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "bartender.infrastructure.settings.test"
python_files = ["test_*.py", "*_test.py"]
